<resources>
    <string name="app_name">CryptoBot</string>

    <string name="coin_name_dialog">Enter new coin name</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="coin_names_pref_key">coinNames</string>
    <string name="pairs_pref_key">pairs</string>
    <string name="available_pairs_pref_key">available_pairs</string>
    <string name="history_pref_key">history</string>


    <string name="bittrex_api_key">bittrex_api_key</string>
    <string name="bittrex_secret_key">bittrex_secret_key</string>
    <string name="binance_api_key">binance_api_key</string>
    <string name="binance_secret_key">binance_secret_key</string>
    <string name="livecoin_api_key">livecoin_api_key</string>
    <string name="livecoin_secret_key">livecoin_secret_key</string>

    <string name="crypto_icon">crypto Icon</string>
    <string name="currency">Currency</string>
    <string name="binance">Binance</string>
    <string name="bittrex">Bittrex</string>
    <string name="binance_api_keys">Binance Api Keys</string>
    <string name="secret_key">Secret key</string>
    <string name="api_key">Api key</string>
    <string name="bittrex_api_keys">Bittrex Api Keys</string>
    <string name="settings">Settings</string>
    <string name="paste_key_here">paste key here</string>
    <string name="livecoin">Livecoin</string>
    <string name="livecoin_api_keys">Livecoin Api Keys</string>


    <!--    <string name="bittrex_url">http://10.0.2.2:8888/crypt/bittrex/</string>-->
    <!--    <string name="binance_url">http://10.0.2.2:8888/crypt/binance/</string>-->
    <string name="bittrex_url">https://api.bittrex.com/v3/</string>
    <string name="binance_url">https://api.binance.com/</string>
    <string name="livecoin_url">https://api.livecoin.net/</string>

    <string name="_0_0d">0.0d</string>
    <string name="percent">%</string>
    <string name="pair">Pair</string>
    <string name="bid">Bid:</string>
    <string name="ask">Ask:</string>
    <string name="balance">Balance</string>
    <string name="trading_pairs">Trading Pairs</string>
    <string name="_0">0</string>

    <string name="channel_name">Profitable pairs notification</string>
    <string name="foreground_channel_name">CryptoBot notifications</string>

    <string name="bot_toggle">Bot toggle</string>

    <string name="service_run_period">run_period</string>
    <string name="statistic_run_period">statistic_period</string>
    <string name="min_profit_percent">min_profit_percent</string>
    <string name="profit_graph">Profit Graph</string>
    <string name="sync_balances_title">Sync all balances?</string>
    <string name="auto_trade">auto_trade</string>
    <string name="History">History</string>
    <string name="action">Action</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="market">Market</string>
    <string name="time">Time</string>
    <string name="quantity">quantity</string>
    <string name="proxy_url">proxy_url</string>
    <string name="proxy_username">proxy_username</string>
    <string name="proxy_password">proxy_password</string>
    <string name="proxy_port">proxy_port</string>
    <string name="binance_withdrawal_api_key">binance_withdrawal_api_key</string>
    <string name="binance_withdrawal_secret_key">binance_withdrawal_secret_key</string>
    <string name="min_btc_amount">min_btc_amount</string>
    <string name="min_eth_amount">min_eth_amount</string>
    <string name="min_usdt_amount">min_usdt_amount</string>
    <string name="add_new_coin">Add new coin</string>
    <string name="sync_all_balances">Sync all balances</string>
    <string name="web_socket_enabled">web_socket_enabled</string>
</resources>
