<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/pair_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="BTC/LTC" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bid"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/bittrex_bid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:textColor="@color/colorWhite"
            tools:text="0.00000000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/bittrex_bid_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:textColor="@color/colorWhite"
            tools:text="0.00000000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/bittrex_ask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:textColor="@color/colorWhite"
            tools:text="0.00000000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/bittrex_ask_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:textColor="@color/colorWhite"
            tools:text="0.00000000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/bittrex_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:textColor="@color/colorWhite"
            tools:text="0.000000000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bid"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/binance_bid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:textColor="@color/colorWhite"
            tools:text="0.000000000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/binance_bid_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:textColor="@color/colorWhite"
            tools:text="0.00000000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/binance_ask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:textColor="@color/colorWhite"
            tools:text="0.000000000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/binance_ask_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:textColor="@color/colorWhite"
            tools:text="0.00000000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/binance_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:textColor="@color/colorWhite"
            tools:text="0.000000000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/pair_percent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="center"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        tools:text="100" />

</LinearLayout>